public/styles/global.css
@import "fonts.css";
@import "normalize.css";
:root {
	/* Typography */
	--font-sans: "Satoshi", sans-serif;
  --font-serif: "Butler", serif;
  --font-mono: "FiraCode", monospace;

  --lineHeight-none: 1;
  --lineHeight-tight: 1.1;
  --lineHeight-normal: 1.5;
  --lineHeight-relaxed: 1.625;

  /* Spacing */
  --page-padding: 0;
  --padding: 16px;
  --radius: 16px;

	/* Colors */
	--color-1: #1a7465;
  --color-1-rgb: 26, 116, 101;
  --color-text-1: #000000;
  --color-text-2: #2e2e2b;
  --color-text-3: #5e5e5b;
  --color-text-4: #6E6E68;
  --color-text-cloud: #0f3d36;
  --color-bg-light: #fffef9;
  --color-bg-dark: #ebe9e1;
  --color-bg: #f5f4f0;
}
@media (prefers-color-scheme: dark) {
  :root {
    --color-1: #4fccb7;
		--color-1-rgb: 79,205,184;
    --color-text-1: #ffffe3;
		--color-text-2: #ffffe3;
		--color-text-3: #a8a896;
		--color-text-4: #7e7e6f;
		--color-text-cloud: #c7f0ea;
		--color-bg-light: #30302b;
		--color-bg-dark: #292825;
		--color-bg: #10100e;
	}
}

*,
:after,
:before {
  box-sizing: border-box;
  transition: 200ms background;
}

html {
  line-height: var(--lineHeight-normal);
  font-size: 16px;
}

body {
  font-family: var(--font-sans);
  font-size: 16px;
  color: var(--color-text-2);
  background: var(--color-bg);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-top: 48px;
  margin-bottom: 0;
  line-height: var(--lineHeight-tight);
  color: var(--color-text-2);
}

h2,
h3,
h4,
h5,
h6 {
  font-weight: 700;
  color: var(--color-text-2);
}

h1 {
  font-weight: 800;
  font-size: 48px;
}

h2 {
  font-weight: 700;
  font-size: 32px;
}

h3 {
  font-size: 24px;
}

h4 {
  font-size: 18px;
}

h5 {
  font-size: 16px;
}

h6 {
  font-size: 14px;
}

h1 > a,
h2 > a,
h3 > a,
h4 > a,
h5 > a,
h6 > a {
  text-decoration: none;
  color: inherit;
}

p {
  color: var(--color-text-3);
  font-size: 16px;
  font-weight: 400;
  line-height: var(--lineHeight-relaxed);
  margin: 32px 0 0 0;
  padding: 0;
  max-width: 600px;
}

a {
  color: var(--color-1);
  text-decoration: none;
}

time {
  font-size: 16px;
  font-weight: 500;
  color: var(--color-text-4);
}

/* Blog */
ul,
ol {
  margin: 24px 0 0 0;
  font-size: 16px;
  padding-left: 16px;
}
li {
  font-weight: 400;
  line-height: var(--lineHeight-relaxed);
  color: var(--color-text-3);
}
img {
  max-width: 100%;
  max-height: 600px;
  margin: 32px 0 32px 0;
}
img + p em {
  display: block;
  padding: 0;
  margin-top: -42px;
}
img + em {
  display: block;
  padding: 0;
  margin-top: -24px;
}
pre {
  margin: 32px 0 32px 0;
  padding: var(--padding);
  grid-column: full !important;
  border-radius: 6px;
}
pre + p {
  margin: 0
}
pre + p em {
  display: block;
  padding: 0;
  margin-top: -24px;
}
code {
  font-size: 14px;
  font-family: var(--font-mono);
}
blockquote {
  grid-column: full !important;
  width: 100%;
  margin: 0;
  color: var(--color-text-4);
  padding: var(--padding);
  border-left: 4px solid var(--color-1);
  font-size: 16px;
  margin-top: 32px;
  background: rgba(var(--color-1-rgb), 0.1);
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
}

blockquote > :last-child {
  margin-bottom: 0;
}

blockquote > ul,
blockquote > ol {
  list-style-position: inside;
}

blockquote p {
  max-width: none;
  margin: 0;
  color: var(--color-text-cloud);
}
.author {
  margin-top: 48px;
  font-style: normal;
  font-weight: 500;
  margin-bottom: 8px;
}
.post-title {
  margin-top: 0;
  font-size: 24px;
}
.desc {
  color: var(--color-text-2);
  font-weight: 500;
  line-height: var(--lineHeight-relaxed);
}
.dates-wrapper {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 12px;
  flex-wrap: wrap;
  margin-top: 16px;
}
.updatedDate {
  display: inline-block;
  margin: 0;
  font-size: 16px;
  font-weight: 400;
  padding: 8px 12px;
  background: rgba(var(--color-1-rgb), 0.1);
  color: var(--color-1);
  border-radius: 6px;
}
.updatedDate * {
  font-weight: 400;
  color: var(--color-1);
}

/* Layout */
.page-container {
  min-height: 100vh;
}
.page {
  margin: 0 auto;
  max-width: 964px;
}
.wrapper {
  margin: 0 16px;
  display: grid;
      grid-template-columns: [full-start] var(--page-padding) [wrapper-start] minmax(32px, 932px) [wrapper-end] var(--page-padding) [full-end];
}
.wrapper > * {
  grid-column: wrapper;
}
.wrapper > .fw {
  grid-column: full;
}
.fw-margin {
  margin-inline: var(--padding);
}
.btn {
  display: inline-block;
  padding: 16px 20px;
  border-radius: 12px;
  background: var(--color-text-2);
  color: var(--color-bg);
  font-weight: 700;
  text-decoration: none;
  border: none;
  text-align: center;
}
.btn:hover {
  opacity: 0.8;
}
.arrow-link {
  text-decoration: none;
  display: inline-block;
  font-size: 18px;
  font-weight: 600;
  display: inline-flex;
  align-items: center;
}
.arrow-link svg {
  width: 24px;
  margin-top: 2px;
  margin-left: 4px;
}
.arrow-link:hover {
  opacity: 0.6;
}

@media (min-width: 600px) {
  :root {
    --page-padding: 32px;
    --padding: 32px;
    --radius: 32px;
  }
  .post-title {
    font-size: 48px;
  }
  pre {
    border-radius: 16px;
  }
  blockquote {
    border-top-right-radius: 16px;
    border-bottom-right-radius: 16px;
  }
  code {
    font-size: 16px;
  }
  p {
    font-size: 19px;
  }
  time {
    font-size: 16px;
  }
  ul {
    
  }
  ul,
  ol {
    margin: 32px 0 0 0;
    font-size: 19px;
    padding-left: 16px;
  }
}

